modified:   Backend/LARAVEL-B2B-TRAVEL-APP/app/Http/Controllers/Api/Controller.php new file:   Backend/LARAVEL-B2B-TRAVEL-APP/app/Http/Controllers/Api/UserAuthController.php modified:   Backend/LARAVEL-B2B-TRAVEL-APP/routes.txt modified:   Backend/LARAVEL-B2B-TRAVEL-APP/routes/api.php modified:   Backend/LARAVEL-B2B-TRAVEL-APP/storage/api-docs/api-docs.json
