# Backend/LARAVEL-B2B-TRAVEL-APP/routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\Api\UserAuthController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\AccommodationsController;
@@ -16,6 +17,11 @@ Route::apiResource('accommodations', AccommodationsController::class);
 
 // Contract routes
 Route::apiResource('contracts', ContractsController::class);
+
+Route::post('register',[UserAuthController::class,'register']);
+Route::post('login',[UserAuthController::class,'login']);
+Route::post('logout',[UserAuthController::class,'logout'])
+  ->middleware('auth:sanctum');
 
 /*
 |--------------------------------------------------------------------------
